--- a/Food_choice_and_nutrition_value.ipynb
+++ b/Food_choice_and_nutrition_value.ipynb
@@ -1,10 +1,11 @@
-https://colab.research.google.com/drive/1mVnWyrNcB79AMuIw1CtSSlT7_ekfQgUP?usp=sharing
 {
   "nbformat": 4,
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyPvuS0Q2xfM82sY0nH2UAFX",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@ https://colab.research.google.com/drive/1mVnWyrNcB79AMuIw1CtSSlT7_ekfQgUP?usp=sh
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/tajbirahmed143/Math-DataScience/blob/main/Food_choice_and_nutrition_value.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "source": [
